# ApexBridgeUI

./: .gitignore  BUILD-GUIDE.md  IMPLEMENTATION-SUMMARY.md  LICENSE  PDF-ATTACHMENT-FIX-REPORT.md  PDF-THUMBNAIL-IMPLEMENTATION-REPORT.md  README.md  build-android.sh  build-linux.sh  build-macos.sh  build-windows.bat  debug-image-url.js  demo-plugin-container.html  demo-plugin-store.html  demo-settings-plugins.html  demo-sidebar-resize.html  index.html  package.json  preview-actual-index.html  preview-anthropic.html  preview-fixed.html  preview-theme-toggle.html  preview-unified.html  preview.html  tasks.md  test-all-renderers.html  test-chat-python-highlighting.html  test-code-lang.js  test-code-output.js  test-complete-ui.html  test-css-loaded.html  test-html-render-feature.html  test-image-states.js  test-latex-display.js  test-latex-in-markdown.html  test-latex-regex.js  test-latex-rendering.html  test-markdown-code-highlighting.html  test-regex.js  test-settings-modal.html  (+6 more)
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_network_debug.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: VCPChat.desktop
src-tauri/src/: lib.rs
src-tauri/src/commands/: attachments.rs  file_system.rs  migration.rs  mod.rs  settings.rs  utils.rs  window.rs
src-tauri/src/models/: agent.rs  attachment.rs  group.rs  message.rs  mod.rs  notification.rs  settings.rs  topic.rs
src-tauri/src/plugin/: audit_logger.rs  filesystem_api.rs  lifecycle_manager.rs  manifest_parser.rs  mod.rs  network_proxy.rs  permission_manager.rs  plugin_manager.rs  storage_api.rs
(+248 files in other folders)
