[package]
name = "apexbridge"
version = "1.0.0"
description = "ApexBridge - Apex Integration Platform Connecting Human and AI Intelligence"
authors = ["ApexBridge Project"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
url = "2.5"
thiserror = "1.0"
zip = "0.6"
glob = "0.3"
notify = "6.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
lru = "0.12"

tauri = { version = "2.9.3", features = [] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
mockito = "1.5"
